--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -15,16 +15,20 @@
             android:icon="@drawable/ic_info"
             android:title="Announcement"/>
     </group>
-    <item android:title="">
+    <item
+        android:id="@+id/bottomItem"
+        android:title="">
         <menu>
             <group android:checkableBehavior="single">
-                <item android:title="Setting"
+                <item
                     android:id="@+id/menu_setting"
-                    android:icon="@drawable/ic_setting"/>
-                <item android:title="Logout"
-                    android:onClick="handleLogoutClickEvent"
+                    android:icon="@drawable/ic_setting"
+                    android:title="Setting" />
+                <item
                     android:id="@+id/menu_logout"
-                    android:icon="@drawable/ic_logout"/>
+                    android:icon="@drawable/common_full_open_on_phone"
+                    android:onClick="handleLogoutClickEvent"
+                    android:title="Login / Register" />
             </group>
         </menu>
     </item>
