--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -33,7 +33,7 @@
             android:id="@+id/user_series_btn"
             android:layout_width="69dp"
             android:layout_height="64dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="35dp"
             app:layout_constraintEnd_toStartOf="@+id/user_tag_btn5"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/user_post_btn"
@@ -67,7 +67,7 @@
             android:id="@+id/user_displayname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
             android:gravity="center"
             android:text="%display name%"
             android:textColor="#5488C7"
@@ -100,7 +100,7 @@
         </androidx.cardview.widget.CardView>
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/edit_btn"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="8dp"
