--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -161,6 +161,28 @@
         app:layout_constraintTop_toBottomOf="@+id/user_total_view" />
 
     <TextView
+        android:id="@+id/txt_toatal_post"
+        android:layout_width="wrap_content"
+        android:layout_height="37dp"
+        android:layout_marginStart="16dp"
+        android:gravity="center"
+        android:textColor="#9B9B9B"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/user_toatal_post"
+        app:layout_constraintTop_toBottomOf="@+id/user_total_view" />
+
+    <TextView
+        android:id="@+id/txt_toatal_view"
+        android:layout_width="wrap_content"
+        android:layout_height="37dp"
+        android:layout_marginStart="16dp"
+        android:gravity="center"
+        android:textColor="#9B9B9B"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/user_total_view"
+        app:layout_constraintTop_toTopOf="@+id/user_total_view" />
+
+    <TextView
         android:id="@+id/user_total_following"
         android:layout_width="wrap_content"
         android:layout_height="37dp"
