--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -100,6 +100,7 @@
         </androidx.cardview.widget.CardView>
 
         <ImageView
+            android:onClick="ClickEdit"
             android:id="@+id/edit_btn"
             android:layout_width="50dp"
             android:layout_height="50dp"
